fix overflow of the terminal above the fold

--- a/source/stylesheets/_enclave.scss
+++ b/source/stylesheets/_enclave.scss
@@ -1,3 +1,6 @@
+body.enclave header {
+  overflow: hidden;
+}
 .enclave-hero {
   position: relative;
   padding-bottom: 150px;
